; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_display.c_radeon_user_framebuffer_create_handle.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_display.c_radeon_user_framebuffer_create_handle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_framebuffer = type { i32 }
%struct.drm_file = type { i32 }
%struct.radeon_framebuffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_framebuffer*, %struct.drm_file*, i32*)* @radeon_user_framebuffer_create_handle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @radeon_user_framebuffer_create_handle(%struct.drm_framebuffer* %0, %struct.drm_file* %1, i32* %2) #0 {
  %4 = alloca %struct.drm_framebuffer*, align 8
  %5 = alloca %struct.drm_file*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.radeon_framebuffer*, align 8
  store %struct.drm_framebuffer* %0, %struct.drm_framebuffer** %4, align 8
  store %struct.drm_file* %1, %struct.drm_file** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.drm_framebuffer*, %struct.drm_framebuffer** %4, align 8
  %9 = call %struct.radeon_framebuffer* @to_radeon_framebuffer(%struct.drm_framebuffer* %8)
  store %struct.radeon_framebuffer* %9, %struct.radeon_framebuffer** %7, align 8
  %10 = load %struct.drm_file*, %struct.drm_file** %5, align 8
  %11 = load %struct.radeon_framebuffer*, %struct.radeon_framebuffer** %7, align 8
  %12 = getelementptr inbounds %struct.radeon_framebuffer, %struct.radeon_framebuffer* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @drm_gem_handle_create(%struct.drm_file* %10, i32 %13, i32* %14)
  ret i32 %15
}

declare dso_local %struct.radeon_framebuffer* @to_radeon_framebuffer(%struct.drm_framebuffer*) #1

declare dso_local i32 @drm_gem_handle_create(%struct.drm_file*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
